# Licorice

./: .env.example  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.cfg
app/: main.py  utils.py
app/api/: api.py  crud.py
app/db/: config.py  db_mgmt.py  models.py
app/models/: models.py
app/services/: exchange_api.py  scheduler.py  smtp.py
app/utils/: logging_setup.py
